apps/pipeline/upstream/base/metadata/options/istio/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: metadata-grpc
  namespace: kubeflow
spec:
  parentRefs:
  - name: kubeflow-gateway
    namespace: kubeflow
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ml_metadata
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /ml_metadata
    backendRefs:
    - name: metadata-envoy-service
      port: 9090
